# xfce-repocapp

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  README  README.md  TODO.md  __init__.py  autogen_make_xfce4.py  build_all.py  build_xfce.py  cappdata.py  clean_all.py  clean_xfce.py  clone_all.py  clone_xfce.py  git_apps_xfce4.py  git_bindings_xfce4.py  git_core_xfce4.py  git_panel_plugins_xfce4.py  git_thunar_plugins_xfce4.py  git_www_xfce4.py  install_all.py  install_xfce.py  make_install_xfce4.py  noxfile.py  pull_all.py  pull_xfce.py  purge_all.py  purge_packages_xfce4.py  purge_xfce.py  pyproject.toml  pytest.ini  repo_arrays.py  repodir.py  requirements-dev.txt  run  setup.cfg  setup.py  (+4 more)
.github/workflows/: nox-coverage.yml  nox-lint_multi-arch.yml  static.yml
clean/: clean_all.py  clean_apps.py  clean_bindings.py  clean_core.py  clean_panel_plugins.py  clean_thunar_plugins.py  clean_xfce_all.py  clean_xfce_apps.py  clean_xfce_bindings.py  clean_xfce_core.py  clean_xfce_panel_plugins.py  clean_xfce_thunar_plugins.py
clone/: clone_all.py  clone_apps.py  clone_apps_xfce4.py  clone_bindings.py  clone_bindings_xfce4.py  clone_core.py  clone_core_xfce4.py  clone_panel_plugins.py  clone_panel_plugins_xfce4.py  clone_thunar_plugins.py  clone_thunar_plugins_xfce4.py  clone_www.py  clone_www_xfce4.py  clone_xfce.py  clone_xfce4_apps.py  clone_xfce4_bindings.py  clone_xfce4_core.py  clone_xfce4_panel_plugins.py  clone_xfce4_thunar_plugins.py  clone_xfce4_www.py  clone_xfce_all.py  clone_xfce_apps.py  clone_xfce_bindings.py  clone_xfce_core.py  clone_xfce_panel_plugins.py  clone_xfce_thunar_plugins.py  clone_xfce_www.py
htmlcov/: class_index.html  coverage.json  function_index.html  index.html  status.json  z_145eef247bfb46b6_build_xfce_py.html  z_145eef247bfb46b6_cappdata_py.html  z_145eef247bfb46b6_clean_xfce_py.html  z_145eef247bfb46b6_clone_xfce_py.html  z_145eef247bfb46b6_install_xfce_py.html  z_145eef247bfb46b6_pull_xfce_py.html  z_145eef247bfb46b6_purge_xfce_py.html  z_145eef247bfb46b6_repocapp_py.html
install/: install_all.py  install_apps.py  install_bindings.py  install_core.py  install_panel_plugins.py  install_thunar_plugins.py  install_xfce_all.py  install_xfce_apps.py  install_xfce_bindings.py  install_xfce_core.py  install_xfce_panel_plugins.py  install_xfce_thunar_plugins.py
modules/: query.py  repo_arrays.py
pull/: pull_all.py  pull_apps.py  pull_bindings.py  pull_core.py  pull_panel_plugins.py  pull_thunar_plugins.py  pull_www.py  pull_xfce_all.py  pull_xfce_apps.py  pull_xfce_bindings.py  pull_xfce_core.py  pull_xfce_panel_plugins.py  pull_xfce_thunar_plugins.py  pull_xfce_www.py
purge/: purge_all.py  purge_apps.py  purge_bindings.py  purge_core.py  purge_packages_xfce4.py  purge_panel_plugins.py  purge_thunar_plugins.py  purge_www.py  purge_xfce4_apps.py  purge_xfce4_bindings.py  purge_xfce4_thunar_plugins.py  purge_xfce4_www.py  purge_xfce_all.py  purge_xfce_apps.py  purge_xfce_bindings.py  purge_xfce_core.py  purge_xfce_panel_plugins.py  purge_xfce_thunar_plugins.py  purge_xfce_www.py
src/: __init__.py  build_xfce.py  cappdata.py  clean_xfce.py  clone_xfce.py  install_xfce.py  pull_xfce.py  purge_xfce.py  repocapp.py
tests/: test_build_xfce.py  test_clean_xfce.py  test_clone_xfce.py  test_install_xfce.py  test_pull_xfce.py  test_purge_xfce.py  test_repocapp.py  test_xfce_repocapp.py
update/: update_apps_xfce4.py  update_bindings_xfce4.py  update_core_xfce4.py  update_panel-plugins_xfce4.py  update_thunar_plugins_xfce4.py  update_www_xfce4.py  update_xfce4_apps.py  update_xfce4_bindings.py  update_xfce4_core.py  update_xfce4_panel-plugins.py  update_xfce4_thunar_plugins.py  update_xfce4_www.py  update_xfce_apps.py  update_xfce_bindings.py  update_xfce_core.py  update_xfce_panel_plugins.py  update_xfce_thunar_plugins.py  update_xfce_www.py
xfce_repocapp/: __init__.py  build_xfce.py  cappdata.py  clean_xfce.py  clone_xfce.py  install_xfce.py  pull_xfce.py  purge_xfce.py  repocapp.py
xfce_repocapp_KEVIN_BOWEN.egg-info/: PKG-INFO  SOURCES.txt
