[tool.black]
line-length = 79
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .idea
  | logs
  | .venv
  | build
  | dist
)/
'''

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/__init__.py",
    "*tests/*",
    "*test_*.py",
    "*tests.py",
]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["*.gitignore"]
extend_skip = ["*.md", "*.json"]
line_length = 79

[tool.poetry]
name = "xfce-repocapp"
version = "0.8.7"
description = "A collection of scripts to maintain local Xfce repositories"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "GPL-2.0-only"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
coverage = {extras = ["toml"], version = "^7.0.0"}
pytest-cov = "^4.0.0"
pylint = "^2.12.2"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pre-commit = "^3.0.0"
nox = "2023.4.22"
flake8-bandit = "^4.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^23.0.0"
flake8-import-order = "^0.18.1"
safety = "2.4.0b1"
pip-check = "^2.7"
Sphinx = "7.0.0"
pip-audit = "^2.4.0"
ruff = "^0.0.263"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = "src"
filterwarnings = [ ]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    "__pypackages__",
    "_build",
    "build",
    "dist",
]

# Same as Black.
# line-length = 88
line-length = 79

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
# target-version = "py310"
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta"
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
