[tool.poetry]
name = "xfce-repocapp"
version = "0.8.7"
description = "A collection of scripts to maintain local Xfce repositories"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "GPL-2.0-only"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"
ruff = ">=0.1.0, <=0.3.9"
nox = "2023.4.22"
pytest = "^8.0"
pytest-cov = "^4.0.0"
coverage = { version = "^7.0.0", extras = ["toml"] }
pylint = "^3.0"
black = "^24.0.0"
flake8 = "^7.0.0"
isort = "^5.10.1"
flake8-bandit = "^4.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^24.0"
flake8-import-order = "^0.18.1"
safety = "^3.0"
sphinx = ">= 7.0, < 7.3.0"

[tool.black]
line-length = 88
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .idea
  | logs
  | .venv
  | build
  | dist
)/
'''

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/__init__.py",
    "*tests/*",
    "*test_*.py",
    "*tests.py",
]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.coverage.html]
show_contexts = true
title = "xfce-repocapp coverage report"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["*.gitignore"]
extend_skip = ["*.md", "*.json"]
line_length = 79

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = "src"
filterwarnings = [ ]

[tool.ruff]
preview = true
respect-gitignore = true
unsafe-fixes = false

# Same as Black.
line-length = 88

# Assume Python 3.10.
target-version = "py312"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    "__pypackages__",
    "_build",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# "src/test.py" = ["S101", "S106"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta"
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
