[metadata]
name = xfce-repocapp
version = 0.8.2
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
description = Build scripts for managing Xfce repositories
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/kevinbowen/xfce-repocapp
project_urls =
    Bug Tracker = https://gitlab.com/kevinbowen/xfce-repocapp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where =
