[metadata]
name = xfce-repocapp
version = 0.8.4
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
description = Build scripts for managing Xfce repositories
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/kevinbowen/xfce-repocapp
project_urls =
    Bug Tracker = https://gitlab.com/kevinbowen/xfce-repocapp/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Development Status :: 3 - Alpha
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Version Control
    Topic :: Utilities

[options]
package_dir =
packages = find:
python_requires = >=3.8

[options.packages.find]
where =
