[metadata]
name = xfce-repocapp
version = 0.8.6
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
description = Scripts for managing Xfce repositories
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/kevinbowen/xfce-repocapp
project_urls =
    Bug Tracker = https://gitlab.com/kevinbowen/xfce-repocapp/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Development Status :: 3 - Alpha
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Version Control
    Topic :: Utilities

[options]
package_dir =
packages = find:
python_requires = >=3.8

[flake8]
# https://flake8.pycqa.org/en/latest/user/configuration.html
exclude =
    # No need to traverse git directory
    .git,
    # Skip cache directories
    __pycache__,
    .pytest_cache,
    build,
    .env,
    .idea,
    logs,
    staticfiles/*,
    dist,
    images/
# https://www.flake8rules.com
ignore =
    # falsely triggers on list slicing
    E203
    # import at top, avoid circular imports
    E402
    # bare except
    E722
    # need to understand & document use of arg in tests
    F821
    # Issues with shell processes
    S404
    S602
    S603
    S605
    S607
max-line-length = 79
per-file-ignores =
    tests/tests_*:S101,S106
    src/tests/*:S101,S106
    src/*.py:S101,S106
    # __init__ exports names
    # app/crud/__init__.py: F401
    # app/schemas/__init__.py: F401
    # app/tests/conftest.py: E501

[options.packages.find]
where =
